--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smart-auc-demo",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A demo AUC consultation app.",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/barabo/smart-auc-demo#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-session": "^1.17.0"
+    "express-session": "^1.17.0",
+    "fhirclient": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
