--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "demo": "nodemon ./login.js",
+    "launch": "http-server -p 8899 -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +22,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "fhirclient": "^2.1.0"
+    "fhirclient": "^2.1.0",
+    "http-server": "^0.11.1",
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
