--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A demo AUC consultation app.",
   "main": "index.js",
   "scripts": {
+    "cds-services": "nodemon ./cds-services.js",
     "demo": "nodemon ./index.js",
     "launch": "http-server -p 8899 -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/barabo/smart-auc-demo#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "fhirclient": "^2.1.0",
