updated the readme with CDS hooks sandbox details

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A demo AUC consultation app.",
   "main": "index.js",
   "scripts": {
+    "all": "concurrently --kill-others \"npm:cds-services\" \"npm:launch\" \"npm:demo\"",
     "cds-services": "nodemon ./cds-services.js",
     "demo": "nodemon ./index.js",
     "launch": "http-server -p 8899 -c-1",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/barabo/smart-auc-demo#readme",
   "dependencies": {
+    "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
