feat: refactored the evaluation logic into the auc module.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "smart-auc-demo",
-  "version": "2.0.0",
-  "description": "A demo AUC consultation app.",
-  "main": "index.js",
+  "version": "3.0.0",
+  "description": "A demo AUC guideline consultation app.",
+  "main": "index.html",
   "scripts": {
-    "all": "concurrently --kill-others \"npm:cds-services\" \"npm:launch\" \"npm:demo\"",
+    "all": "concurrently --kill-others \"npm:cds-services\" \"npm:launch\"",
     "cds-services": "nodemon ./cds-services.js",
-    "demo": "nodemon ./index.js",
     "launch": "http-server -p 8899 -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +24,6 @@
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
     "fhirclient": "^2.1.0",
     "http-server": "^0.11.1",
     "jquery": "^3.4.1"
